# MuScinTest

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.MD  config.yaml  main.cc
RootApp/: CMakeLists.txt  main.cc
include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  MuTrackInfo.hh  OpticalPhotonHit.hh  OpticalPhotonTrackInfo.hh  ParallelWorld.hh  PrimaryGeneratorAction.hh  PrimaryMuonFilter.hh  RunAction.hh  SiliconPMSD.hh  SteppingAction.hh  TrackingAction.hh  YAMLParser.hh
macros/: _plot.mac  batch.mac  build_custom_gui.mac  init.mac  paint_geometry.mac  vis.mac
src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  OpticalPhotonHit.cc  ParallelWorld.cc  PrimaryGeneratorAction.cc  RunAction.cc  SiliconPMSD.cc  SteppingAction.cc  TrackingAction.cc  YAMLParser.cc
