cmake_minimum_required(VERSION 3.16...3.27)

project(MuScinTest)

# Add RootApp subdirectory
add_subdirectory(RootApp)

find_package(Geant4 REQUIRED ui_all vis_all)

file(GLOB headers ${PROJECT_SOURCE_DIR}/include/*.hh)
file(GLOB sources ${PROJECT_SOURCE_DIR}/src/*.cc)

add_executable(MuScinTest main.cc ${sources} ${headers})
target_include_directories(MuScinTest PRIVATE include)
target_link_libraries(MuScinTest PRIVATE ${Geant4_LIBRARIES})

set(SCRIPTS
	macros/vis.mac
	macros/paint_geometry.mac
	macros/build_custom_gui.mac
	macros/_plot.mac
)

foreach(_script ${SCRIPTS})
	configure_file(
		${PROJECT_SOURCE_DIR}/${_script}
		${PROJECT_BINARY_DIR}/${_script}
		COPYONLY
	)
endforeach()

